fix navbar overflow

--- a/frontend/css/inc/custom-layout.sass
+++ b/frontend/css/inc/custom-layout.sass
@@ -55,6 +55,7 @@ a.has-icon
             color: $kars-navbar-item-hover-color
 
     .kars-navbar-leading
+        overflow-x: auto
         scrollbar-width: none
         &::-webkit-scrollbar
             width: 0
